fix: Make backdrop-filters work on safari

--- a/app/assets/styles/animations.css
+++ b/app/assets/styles/animations.css
@@ -17,6 +17,7 @@
   transform: scale(0);
   animation: click-ripple 500ms linear;
   backdrop-filter: var(--filter-click-ripple);
+  -webkit-backdrop-filter: var(--filter-click-ripple);
   opacity: 0.5;
 }
 
