--- a/app/assets/styles/control/button.css
+++ b/app/assets/styles/control/button.css
@@ -37,4 +37,5 @@ button:not(.control-size-square) svg,
   cursor: default !important;
   filter: none !important;
   backdrop-filter: none !important;
+  -webkit-backdrop-filter: none !important;
 }
