--- a/app/assets/styles/global.css
+++ b/app/assets/styles/global.css
@@ -75,6 +75,7 @@ body {
   transform: translate(-50%, -50%);
   border-radius: 50%;
   backdrop-filter: var(--filter-loading-indicator);
+  -webkit-backdrop-filter: var(--filter-loading-indicator);
   width: 64px;
   height: 64px;
   opacity: var(--loading-indicator-opacity);
