--- a/app/components/board/post/styles.module.css
+++ b/app/components/board/post/styles.module.css
@@ -16,6 +16,7 @@
   position: absolute;
   pointer-events: none;
   backdrop-filter: brightness(0.6);
+  -webkit-backdrop-filter: brightness(0.6);
   z-index: 9;
   border-radius: var(--global-border-radius);
 }
@@ -26,6 +27,7 @@
   height: 100%;
   filter: none !important;
   backdrop-filter: blur(7px) !important;
+  -webkit-backdrop-filter: blur(7px) !important;
   background: none !important;
   border: none !important;
   border-radius: 0;
@@ -60,12 +62,12 @@
   padding: 0;
   margin: 0;
   background-color: transparent;
-  backdrop-filter: none;
+  backdrop-filter: none !important;
+  -webkit-backdrop-filter: none !important;
   justify-content: start;
   align-items: center;
   height: auto;
   min-height: unset;
-  backdrop-filter: none !important;
 }
 
 .author :global(s) {
@@ -88,6 +90,7 @@
   justify-content: start;
   padding: 0;
   backdrop-filter: none !important;
+  -webkit-backdrop-filter: none !important;
 }
 
 .date :global(svg) {
