--- a/app/components/common/avatar/styles.module.css
+++ b/app/components/common/avatar/styles.module.css
@@ -6,6 +6,7 @@
   padding: 0 !important;
   filter: none !important;
   backdrop-filter: none !important;
+  -webkit-backdrop-filter: none !important;
 }
 
 :global(.avatar) > :global(img) {
