--- a/app/components/common/control/menu/styles.module.css
+++ b/app/components/common/control/menu/styles.module.css
@@ -2,6 +2,7 @@
   position: relative;
   filter: none !important;
   backdrop-filter: none !important;
+  -webkit-backdrop-filter: none !important;
 }
 
 :global(.menu-button menu) {
